--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 	width: 1210px;
 }
 
-#slides .carousel-caption #nameOfReciepe {
+#slides .carousel-caption #nameOfRecipe {
 	color: #3c332b;
 	font-size: 1.5em; 
 	background-color: rgba(240, 223, 215, 0.5);
@@ -117,11 +117,11 @@ footer a:hover {
 	margin-left: 1.5%;
 	padding-left: 1.5%;
 }
-#reciepsBtn .btn {
+#recipesBtn .btn {
 	background-color: #f0dfd7;
 	color: #3c332b;
 }
-#reciepsBtn .btn:hover {
+#recipesBtn .btn:hover {
 		background-color: #d7bab4;
 }
 
@@ -143,6 +143,6 @@ footer a:hover {
 
 
 
-.reciepSteps:hover {
+.recipeSteps:hover {
 	background-color: #f0dfd7;
 }
